baml_language/crates/baml_tests/snapshots/control_flow/baml_tests__control_flow__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.ElseIfChain(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: bool
    let _3: bool
    let _4: bool

    bb0: {
        _2 = copy _1 == const 1_i64;
        branch copy _2 -> [bb6, bb1];
    }

    bb1: {
        _3 = copy _1 == const 2_i64;
        branch copy _3 -> [bb5, bb2];
    }

    bb2: {
        _4 = copy _1 == const 3_i64;
        branch copy _4 -> [bb4, bb3];
    }

    bb3: {
        notify_block(Default case, level=1);
        _0 = const "other";
        goto -> bb7;
    }

    bb4: {
        notify_block(Case three, level=1);
        _0 = const "three";
        goto -> bb7;
    }

    bb5: {
        notify_block(Case two, level=1);
        _0 = const "two";
        goto -> bb7;
    }

    bb6: {
        notify_block(Case one, level=1);
        _0 = const "one";
        goto -> bb7;
    }

    bb7: {
        return;
    }
}

fn user.Headers() -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x
    let _2: int // y
    let _3: int // z
    let _4: int
    let _5: int
    let _6: void
    let _7: int
    let _8: string

    bb0: {
        notify_block(Setup, level=1);
        _1 = const 1_i64;
        notify_block(Configuration, level=2);
        _2 = const 2_i64;
        notify_block(Processing, level=1);
        _4 = copy _1;
        _5 = copy _2;
        _3 = copy _4 + copy _5;
        _7 = copy _3;
        _8 = const "to_string";
        _6 = copy _7[_8];
        _0 = call copy _6() -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.IfElseWithHeaders(flag: bool) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: bool // flag // param

    bb0: {
        notify_block(Check flag, level=1);
        branch copy _1 -> [bb2, bb1];
    }

    bb1: {
        notify_block(False branch, level=1);
        _0 = const "no";
        goto -> bb3;
    }

    bb2: {
        notify_block(True branch, level=1);
        _0 = const "yes";
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

fn user.LlmFunction(input: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // input // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "input": copy _1 };
        _0 = call const fn baml.llm.call_llm_function(const fn user.TestClient, const "LlmFunction", copy _2) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.LlmFunction$build_request(input: string) -> baml.http.Request {
    // Locals:
    let _0: baml.http.Request // _0 // return
    let _1: string // input // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "input": copy _1 };
        _0 = call const fn baml.llm.build_request(const fn user.TestClient, const "LlmFunction", copy _2) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.LlmFunction$parse(json: string) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: string // json // param

    bb0: {
        _0 = call const fn baml.llm.parse(const "LlmFunction", copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.LlmFunction$render_prompt(input: string) -> baml.llm.PromptAst {
    // Locals:
    let _0: baml.llm.PromptAst // _0 // return
    let _1: string // input // param
    let _2: map<string, unknown>

    bb0: {
        _2 = { const "input": copy _1 };
        _0 = call const fn baml.llm.render_prompt(const fn user.TestClient, const "LlmFunction", copy _2) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.MatchExpression(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param

    bb0: {
        switch copy _1 [1: bb3, 2: bb2, otherwise: bb1];
    }

    bb1: {
        notify_block(Default, level=1);
        _0 = const "other";
        goto -> bb4;
    }

    bb2: {
        notify_block(Two, level=1);
        _0 = const "two";
        goto -> bb4;
    }

    bb3: {
        notify_block(One, level=1);
        _0 = const "one";
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.NestedControlFlow(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: bool
    let _3: bool

    bb0: {
        notify_block(Outer, level=1);
        _2 = copy _1 > const 0_i64;
        branch copy _2 -> [bb2, bb1];
    }

    bb1: {
        notify_block(Non-positive, level=1);
        _0 = const "zero or negative";
        goto -> bb5;
    }

    bb2: {
        notify_block(Positive, level=1);
        _3 = copy _1 > const 100_i64;
        branch copy _3 -> [bb4, bb3];
    }

    bb3: {
        notify_block(Small, level=1);
        _0 = const "small";
        goto -> bb5;
    }

    bb4: {
        notify_block(Large, level=1);
        _0 = const "large";
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn user.SimpleFunction() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        _0 = const 42_i64;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.TestClient$new() -> null {
    // Locals:
    let _0: null // _0 // return
    let _1: void
    let _2: map<void, void>
    let _3: map<void, void>
    let _4: map<void, void>

    bb0: {
        _2 = {  };
        _3 = {  };
        _4 = {  };
        _1 = baml.llm.PrimitiveClientOptions { const "gpt-4", const null, const null, const null, const null, const null, const null, const null, const null, const null, const null, const null, copy _2, copy _3, copy _4 };
        _0 = baml.llm.PrimitiveClient { const "TestClient", const "openai", copy _1 };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.WhileWithHeaders() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // count
    let _2: bool
    let _3: int

    bb0: {
        notify_block(Initialize, level=1);
        _1 = const 0_i64;
        notify_block(Loop, level=1);
        goto -> bb1;
    }

    bb1: {
        _3 = copy _1;
        _2 = copy _3 < const 10_i64;
        branch copy _2 -> [bb4, bb2];
    }

    bb2: {
        notify_block(Done, level=1);
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        notify_block(Iteration, level=1);
        _1 = copy _1 + const 1_i64;
        goto -> bb1;
    }
}
