baml_language/crates/baml_tests/snapshots/control_flow/baml_tests__control_flow__04_tir2.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.SimpleFunction() -> int {
  { : 42
    42 : 42
  }
}
function user.Headers() -> string {
  { : unknown
    // [1] Setup
    let x = 1 : 1 -> int
    // [2] Configuration
    let y = 2 : 2 -> int
    // [1] Processing
    let z = x Add y : int
    z.to_string() : unknown
  }
  !! 319..335: unresolved member: int.to_string
}
function user.IfElseWithHeaders(flag: bool) -> string {
  { : "yes" | "no"
    // [1] Check flag
    if (flag : bool) : "yes" | "no"
      { : "yes"
        // [1] True branch
        "yes" : "yes"
      }
    else
      { : "no"
        // [1] False branch
        "no" : "no"
      }
  }
}
function user.ElseIfChain(x: int) -> string {
  { : "one" | "two" | "three" | "other"
    if (x Eq 1 : bool) : "one" | "two" | "three" | "other"
      { : "one"
        // [1] Case one
        "one" : "one"
      }
    else
      if (x Eq 2 : bool) : "two" | "three" | "other"
        { : "two"
          // [1] Case two
          "two" : "two"
        }
      else
        if (x Eq 3 : bool) : "three" | "other"
          { : "three"
            // [1] Case three
            "three" : "three"
          }
        else
          { : "other"
            // [1] Default case
            "other" : "other"
          }
  }
}
function user.WhileWithHeaders() -> int {
  { : int
    // [1] Initialize
    let count = 0 : 0 -> int
    // [1] Loop
    while count Lt 10
      { : void
        // [1] Iteration
        count Add= 1 : int
      }
    // [1] Done
    count : int
  }
}
function user.MatchExpression(x: int) -> string {
  { : "one" | "two" | "other"
    match (x : int) : "one" | "two" | "other"
      1 =>
        { : "one"
          // [1] One
          "one" : "one"
        }
      2 =>
        { : "two"
          // [1] Two
          "two" : "two"
        }
      _ =>
        { : "other"
          // [1] Default
          "other" : "other"
        }
  }
}
function user.NestedControlFlow(x: int) -> string {
  { : "large" | "small" | "zero or negative"
    // [1] Outer
    if (x Gt 0 : bool) : "large" | "small" | "zero or negative"
      { : "large" | "small"
        // [1] Positive
        if (x Gt 100 : bool) : "large" | "small"
          { : "large"
            // [1] Large
            "large" : "large"
          }
        else
          { : "small"
            // [1] Small
            "small" : "small"
          }
      }
    else
      { : "zero or negative"
        // [1] Non-positive
        "zero or negative" : "zero or negative"
      }
  }
}
function user.TestClient$new() -> ? {
  PrimitiveClient { name: "TestClient", provider: "openai", options: PrimitiveClientOptions { base_url: null, default_role: null, allowed_roles: null, remap_roles: null, api_key: null, provider_options: null, headers: map {  }, query_params: map {  }, request_body: map { "model": "gpt-4" } } } : unknown
}
function user.LlmFunction(input: string) -> string {
  baml.llm.call_llm_function(TestClient, "LlmFunction", map { "input": input }) : unknown
  !! 0..0: type mismatch: expected string, got unknown
}
function user.LlmFunction$render_prompt(input: string) -> baml.llm.PromptAst {
  baml.llm.render_prompt("LlmFunction", map { "input": input }) : baml.llm.PromptAst
}
function user.LlmFunction$build_request(input: string) -> baml.http.Request {
  baml.llm.build_request("LlmFunction", map { "input": input }) : baml.http.Request
}
