baml_language/crates/baml_tests/snapshots/control_flow/baml_tests__control_flow__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type `int` has no member `to_string`
    ╭─[ main.baml:16:2 ]
    │
 16 │     z.to_string()
    │  ────────┬───────  
    │          ╰───────── type `int` has no member `to_string`
    │ 
    │ Note: Error code: E0001
────╯
