baml_language/crates/baml_tests/snapshots/control_flow/baml_tests__control_flow__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init() -> null {
    call $init_let_0
    store_global user.TestClient
    load_const null
    return
}

function user.ElseIfChain(x: int) -> string {
    load_var x
    load_const 1
    cmp_op ==
    pop_jump_if_false L0
    jump L5

  L0:
    load_var x
    load_const 2
    cmp_op ==
    pop_jump_if_false L1
    jump L4

  L1:
    load_var x
    load_const 3
    cmp_op ==
    pop_jump_if_false L2
    jump L3

  L2:
    notify_block Default case
    load_const "other"
    jump L6

  L3:
    notify_block Case three
    load_const "three"
    jump L6

  L4:
    notify_block Case two
    load_const "two"
    jump L6

  L5:
    notify_block Case one
    load_const "one"

  L6:
    return
}

function user.Headers() -> string {
    notify_block Setup
    notify_block Configuration
    notify_block Processing
    load_const 1
    load_const 2
    bin_op +
    load_const "to_string"
    load_map_element
    call_indirect
    return
}

function user.IfElseWithHeaders(flag: bool) -> string {
    notify_block Check flag
    load_var flag
    pop_jump_if_false L0
    jump L1

  L0:
    notify_block False branch
    load_const "no"
    jump L2

  L1:
    notify_block True branch
    load_const "yes"

  L2:
    return
}

function user.LlmFunction(input: string) -> string {
    load_global user.TestClient
    load_const "LlmFunction"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.call_llm_function
    return
}

function user.LlmFunction$build_request(input: string) -> baml.http.Request {
    load_global user.TestClient
    load_const "LlmFunction"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.build_request
    return
}

function user.LlmFunction$parse(json: string) -> string {
    load_const "LlmFunction"
    load_var json
    call baml.llm.parse
    return
}

function user.LlmFunction$render_prompt(input: string) -> baml.llm.PromptAst {
    load_global user.TestClient
    load_const "LlmFunction"
    load_var input
    load_const "input"
    alloc_map 1
    call baml.llm.render_prompt
    return
}

function user.MatchExpression(x: int) -> string {
    load_var x
    load_const 1
    cmp_op ==
    pop_jump_if_false L0
    jump L3

  L0:
    load_var x
    load_const 2
    cmp_op ==
    pop_jump_if_false L1
    jump L2

  L1:
    notify_block Default
    load_const "other"
    jump L4

  L2:
    notify_block Two
    load_const "two"
    jump L4

  L3:
    notify_block One
    load_const "one"

  L4:
    return
}

function user.NestedControlFlow(x: int) -> string {
    notify_block Outer
    load_var x
    load_const 0
    cmp_op >
    pop_jump_if_false L0
    jump L1

  L0:
    notify_block Non-positive
    load_const "zero or negative"
    jump L4

  L1:
    notify_block Positive
    load_var x
    load_const 100
    cmp_op >
    pop_jump_if_false L2
    jump L3

  L2:
    notify_block Small
    load_const "small"
    jump L4

  L3:
    notify_block Large
    load_const "large"

  L4:
    return
}

function user.SimpleFunction() -> int {
    load_const 42
    return
}

function user.TestClient$new() -> null {
    alloc_instance baml.llm.PrimitiveClient
    load_const "TestClient"
    init_field .name
    load_const "openai"
    init_field .provider
    alloc_instance baml.llm.PrimitiveClientOptions
    load_const "gpt-4"
    init_field .model
    load_const null
    init_field .base_url
    load_const null
    init_field .allowed_role_metadata
    load_const null
    init_field .finish_reason_allow_list
    load_const null
    init_field .finish_reason_deny_list
    load_const null
    init_field .supports_streaming
    load_const null
    init_field .default_role
    load_const null
    init_field .allowed_roles
    load_const null
    init_field .remap_roles
    load_const null
    init_field .api_key
    load_const null
    init_field .provider_options
    load_const null
    init_field .media_url_handler
    alloc_map 0
    init_field .headers
    alloc_map 0
    init_field .query_params
    alloc_map 0
    init_field .request_body
    init_field .options
    return
}

function user.WhileWithHeaders() -> int {
    notify_block Initialize
    load_const 0
    store_var count
    notify_block Loop

  L0:
    load_var count
    load_const 10
    cmp_op <
    pop_jump_if_false L1
    jump L2

  L1:
    notify_block Done
    load_var count
    return

  L2:
    notify_block Iteration
    load_var count
    load_const 1
    bin_op +
    store_var count
    jump L0
}
